app/components/views/TransactionsPage/ReceiveTab/ReceivePage/ReceivePage.module.css
.receiveContent {
  background-color: var(--background-back-color);
  padding-top: 20px;
  padding-left: 28px;
  width: 740px;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

.receiveContentNestForAddress {
  display: flex;
  margin-bottom: 20px;
}

.receiveSelectAmountInput {
  width: 300px;
  display: flex;
}

.receiveSelectAccountInput {
  width: 325px;
}

.requestedAmountInput {
  width: 285px;
}

.receiveRequestedAmount {
  display: flex;
  margin-bottom: 20px;
}
.receiveContentNestQR {
  margin-right: 15px;
  background-color: var(--background-address-copy-color);
  border-radius: 5px;
  vertical-align: middle;
  height: 40px;
  width: 470px;
  color: var(--input-color-default);
  font-size: 19px;
  font-weight: 600;
  text-align: center;
  line-height: 40px;
  position: relative;
  border: 1px transparent solid;
  transition: border-color 1s;
}

.receiveContentNestQR:hover {
  border-color: var(--input-copy-hover-color);
}

.border {
  border-color: var(--input-copy-hover-color);
}

.receiveContentNestCopyQR {
  position: absolute;
  bottom: 0;
  top: 0;
  left: 0;
  right: 0;
  margin: 41px auto auto auto;
  width: 118px;
  height: 35px;
  background-color: transparent;
  z-index: 2;
  opacity: 0;
  transition: opacity 1s;
  transition-duration: 0.5s;
}

.opacity {
  opacity: 1 !important;
}

.receiveContentNestCopyQRText {
  width: 118px;
  height: 20px;
  background-color: var(--background-back-color);
  box-shadow: 0px 3px 13px var(--icons-shadow);
  border-radius: 5px;
  color: var(--link-color);
  font-size: 9px;
  font-weight: normal;
  line-height: 20px;
  white-space: pre;
}

.receiveContentNestCopyQRArrow {
  position: relative;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-bottom: 5px solid var(--background-back-color);
  margin-left: auto;
  margin-right: auto;
  width: 0;
  height: 0;
}

.line {
  height: 40px;
  display: flex;
  margin-bottom: 21px;
  text-align: center;
  font-size: 11px;
}

.receiveContentNestPrefix {
  margin-right: 20px;
  min-width: 125px;
  margin-left: 0;
  font-size: 19px;
  line-height: 24px;
  text-transform: capitalize;
  text-align: right;
}

.receiveContentCopyButton {
  background-repeat: no-repeat;
  background-position: center;
  background-image: var(--copy-to-clipboard-icon);
  background-size: 20px 20px;
  height: 30px;
  width: 30px;
  box-shadow: 0px 3px 5px var(--icons-shadow);
  border-radius: 5px;
  cursor: pointer;
  margin: 0 15px 2px 15px;
}

.receiveContentQRButton {
  background-repeat: no-repeat;
  background-position: center;
  background-image: var(--view-qr-icon);
  background-size: 20px 20px;
  height: 30px;
  width: 30px;
  box-shadow: 0px 3px 5px var(--icons-shadow);
  border-radius: 5px;
  cursor: pointer;
  margin: 0 20px 2px 20px;
}

.receiveContentShareButton {
  background-repeat: no-repeat;
  background-position: center;
  background-image: var(--share-icon);
  background-size: 20px 20px;
  height: 30px;
  width: 30px;
  box-shadow: 0px 3px 5px var(--icons-shadow);
  border-radius: 5px;
  cursor: pointer;
  margin: 0 15px 2px 15px;
}

.receiveContentCopyButton:hover {
  background-color: var(--background-copy-color);
}

.receiveContentQRButton:hover {
  background-color: var(--background-copy-color);
}

.receiveContentShareButton:hover {
  background-color: var(--background-copy-color);
}

.copyParent {
  padding-top: 5px;
  color: var(--tab-text-active-hover);
}

.viewQRParent {
  padding-top: 5px;
  margin-left: 5px;
  color: var(--tab-text-active-hover);
}

.shareQRParent {
  padding-top: 5px;
  margin-left: 5px;
  color: var(--tab-text-active-hover);
}
.copyParent:hover {
  padding-top: 5px;
  color: var(--input-color-default);
}

.viewQRParent:hover {
  padding-top: 5px;
  margin-left: 5px;
  color: var(--input-color-default);
}

.shareQRParent:hover {
  padding-top: 5px;
  margin-left: 5px;
  color: var(--input-color-default);
}

.generateButton {
  position: relative;
  margin-top: 20px;
  margin-left: 600px;
  width: 185px;
  height: 45px;
}

.blueButton {
  font-size: 13px;
  padding: 12px 23px 14px 23px;
}

.receiveSelectAccountInput a {
  margin-left: 10px;
}

@media screen and (max-width: 768px) {
  .receiveContent {
    width: 355px;
    height: 280px;
  }

  .receiveContentNestPrefix {
    margin-bottom: 10px;
  }

  .receiveContentNestForAddress,
  .receiveRequestedAmount {
    flex-wrap: wrap;
  }

  .line {
    flex-wrap: wrap;
    justify-content: center;
  }

  .receiveContentNestQR {
    margin-bottom: 20px;
    font-size: 17px;
  }

  .generateButton {
    margin-left: 216px;
  }

  .copyParent {
    margin-left: -28px;
  }
}

